change twitter and facebook url

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <li class="fn-clear"><a href="http://zhaoxuan.github.io" rel="nofollow" class="action"><i class="icon-home"></i> Home</a></li>
                 <li class="fn-clear"><a href="http://zhaoxuan.github.io/archives.html"><i class="icon-list-ul"></i> Archives</a></li>
                 <li class="fn-clear"><a href="http://zhaoxuan.github.io/contact.html"><i class="icon-envelope-alt"></i> Contact</a></li>
-                <li class="fn-clear"><a href="http://www.twitter.com/piznlin"><i class="icon-twitter"></i> Twitter</a></li>
+                <li class="fn-clear"><a href="http://twitter.com/363602094"><i class="icon-twitter"></i> Twitter</a></li>
             </ul>
         </nav>
     </header>
@@ -43,10 +43,10 @@
 <p>I am John.</p>
 <h3>Contact Me</h3>
 <ul>
-    <li><a href="http://www.twitter.com/piznlin"><i class="icon-twitter"></i> Twitter</a></li>
+    <li><a href="http://twitter.com/363602094"><i class="icon-twitter"></i> Twitter</a></li>
     <li><a href="https://github.com/zhaoxuan"><i class="icon-github"></i> GitHub</a></li>
     <li><a href="https://plus.google.com/107483619032085919305"><i class="icon-google-plus-sign"></i> Google</a></li>
-    <li><a href="http://facebook.com/zhanxinlin"><i class="icon-facebook-sign"></i> Facebook</a></li>
+    <li><a href="http://www.facebook.com/xuan.zhao.39"><i class="icon-facebook-sign"></i> Facebook</a></li>
 </ul>
 </article>
 
