new post for sqlite

--- a/page2/index.html
+++ b/page2/index.html
@@ -202,6 +202,8 @@
 2. 用缓存，我当时强烈推荐使用缓存，把节点下面的字表缓存在内存里面，这样就能一次查询和子查询就不用访问 greenplum 了。
 </code></pre>
 
+<p>两种方案其实做法一样都是要大表分小表，只是实现不一样，一个主张在数据库里面创建小表，一个使用缓存来在客户端缓存数据。</p>
+
 
         
     </article>
@@ -549,7 +551,7 @@
             
         </ul>
     </nav>
-	
+
 
         <footer id="foot">
             <p>&copy; 2014 John Zhao All rights reserved. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/">PIZn</a></p>
